JDK-8136473 : failed: no mismatched stores, except on raw memory: StoreB StoreI
  • Type: Bug
  • Component: hotspot
  • Sub-Component: compiler
  • Affected Version: 9
  • Priority: P2
  • Status: Closed
  • Resolution: Fixed
  • OS: other
  • CPU: x86
  • Submitted: 2015-09-14
  • Updated: 2016-10-24
  • Resolved: 2015-10-20
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 9
9 b92Fixed
Related Reports
Cloners :  
Relates :  
Description
Jake repo, running jtreg -jdk:$JAVA_HOME -agentvm test/jdk/jigsaw against the build (using jake jtreg)  Got several crashes with 

Agent[2].stdout: #  assert(Opcode() == st->Opcode() || st->Opcode() == Op_StoreVector || Opcode() == Op_StoreVector || phase->C->get_alias_index(adr_type()) == Compile::AliasIdxRaw || (Opcode() == Op_StoreL && st->Opcode() == Op_StoreI)) failed: no mismatched stores, except on raw memory: StoreB StoreI

logs not recoverable from jtreg


Comments
Fix failed. See JDK-8140267.
22-10-2015

The following tests fail with the same asssertion: jdk/jigsaw/tools/jlink/basic/BasicTest.java jdk/jigsaw/tools/jlink/plugins/CompressorPluginTest.java jdk/jigsaw/tools/jimage/JImageTest.java jdk/jigsaw/tools/jlink/JLinkPluginsTest.java jdk/jigsaw/tools/jlink/JLinkTest.java
16-09-2015

I encountered the same assertion on Linux 64, and attached the hs_err_pid file.
16-09-2015

From the run above
15-09-2015

A single example test that fails jtreg -jdk:$JAVA_HOME -retain:all -agentvm test/jdk/jigsaw/tools/jimage/JImageTest.java
15-09-2015

Thread 29 crashed with X86 Thread State (64-bit): rax: 0x0000000000000000 rbx: 0x0000000000000006 rcx: 0x0000000123a5a4a8 rdx: 0x0000000000000000 rdi: 0x0000000000006703 rsi: 0x0000000000000006 rbp: 0x0000000123a5a4d0 rsp: 0x0000000123a5a4a8 r8: 0x0000000000000000 r9: 0x00007fff85933d60 r10: 0x0000000008000000 r11: 0x0000000000000206 r12: 0x0000000123a5a640 r13: 0x0e00ced4283f14c1 r14: 0x0000000123a60000 r15: 0x0000000123a5a510 rip: 0x00007fff86a66286 rfl: 0x0000000000000206 cr2: 0x00007fff756fffd8 Logical CPU: 0 Error Code: 0x02000148 Trap Number: 133
15-09-2015

0 libsystem_kernel.dylib 0x00007fff86a66286 __pthread_kill + 10 1 libsystem_c.dylib 0x00007fff859099b3 abort + 129 2 libjvm.dylib 0x0000000102e10829 os::abort(bool, void*, void*) + 223 3 libjvm.dylib 0x0000000102fd5236 VMError::report_and_die() + 2478 4 libjvm.dylib 0x00000001029cb0f3 report_vm_error(char const*, int, char const*, char const*) + 99 5 libjvm.dylib 0x0000000102e15d40 os::get_sender_for_C_frame(frame*) + 76 6 libjvm.dylib 0x00000001029cc4ec print_native_stack(outputStream*, frame, Thread*, char*, int) + 124 7 libjvm.dylib 0x0000000102fd3ff8 VMError::report(outputStream*) + 2894 8 libjvm.dylib 0x0000000102fd4c6b VMError::report_and_die() + 995 9 libjvm.dylib 0x00000001029cb0f3 report_vm_error(char const*, int, char const*, char const*) + 99 10 libjvm.dylib 0x0000000102d8f727 StoreNode::Ideal(PhaseGVN*, bool) + 427 11 libjvm.dylib 0x0000000102e5e1d3 PhaseIterGVN::transform_old(Node*) + 151 12 libjvm.dylib 0x0000000102e5deb9 PhaseIterGVN::optimize() + 179 13 libjvm.dylib 0x000000010296666b Compile::Optimize() + 829 14 libjvm.dylib 0x000000010296528c Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool) + 3118 15 libjvm.dylib 0x0000000102967a32 Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool) + 36 16 libjvm.dylib 0x000000010288c2ec C2Compiler::compile_method(ciEnv*, ciMethod*, int) + 260 17 libjvm.dylib 0x000000010297a08d CompileBroker::invoke_compiler_on_method(CompileTask*) + 3193 18 libjvm.dylib 0x00000001029790c5 CompileBroker::compiler_thread_loop() + 1153 19 libjvm.dylib 0x0000000102f73d87 JavaThread::thread_main_inner() + 367 20 libjvm.dylib 0x0000000102f73ad8 JavaThread::run() + 854 21 libjvm.dylib 0x0000000102e100c8 java_start(Thread*) + 240 22 libsystem_pthread.dylib 0x00007fff91f1f05a _pthread_body + 131 23 libsystem_pthread.dylib 0x00007fff91f1efd7 _pthread_start + 176 24 libsystem_pthread.dylib 0x00007fff91f1c3ed thread_start + 13
15-09-2015

I can observe the same crash. It only occurs in fast debug. Repository: http://hg.openjdk.java.net/jigsaw/jake Changeset: 14015:0321cfe06fef sh ./configure --enable-debug make images jtreg-jigsaw/bin/jtreg -agentvm -jdk ../../build/macosx-x86_64-normal-server-fastdebug/images/jdk jdk/jigsaw/
15-09-2015

I tried reproducing this on a couple machines without success: hg clone http://hg.openjdk.java.net/jigsaw/jake jake sh ./get_source.sh bash ./configure --with-debug-level=fastdebug --disable-warnings-as-errors make images export JAVA_HOME=<...>/jake/build/macosx-x86_64-normal-server-fastdebug/jdk/ jtreg -jdk:$JAVA_HOME -agentvm test/jdk/jigsaw Jim, is it a crash you've seen a single time or have you seen it more than once?
15-09-2015

Yes I ran it on a mac a few times. Are the commands above all that is needed?
15-09-2015

Happens every time I run it. Trying on a Mac?
15-09-2015