8136473: failed: no mismatched stores, except on raw memory: StoreB StoreI

Mismatched stores on same slice possible with Unsafe.Put*Unaligned methods

Reviewed-by: kvn, thartmann