hotspot/src/share/vm/opto/idealKit.hpp
@@ -228,7 +228,9 @@ class IdealKit: public StackObj {
               BasicType bt,
               int adr_idx,
               MemNode::MemOrd mo,
-              bool require_atomic_access = false);
+              bool require_atomic_access = false,
+              bool mismatched = false
+              );
 
   // Store a card mark ordered after store_oop
   Node* storeCM(Node* ctl,
